<resources>
    <string name="app_name">Sudoku</string>
    <string name="mode">Mode:</string>
    <string name="level">Level:</string>
    <string name="player">Player:</string>
    <string name="notes">Notes</string>
    <string name="change_mode">Single Mode</string>
    <string name="cheat">Hint</string>
    <string name="play">Play</string>
    <string name="history">History</string>
    <string name="settings">Credits</string>
    <string name="play_menu">AMov 2019/2020</string>
    <string name="mode_1">Mode 1</string>
    <string name="mode_2">Mode 2</string>
    <string name="mode_3">Mode 3</string>
    <string name="choose_game_difficulty">Choose game difficulty:</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="you_won">You Won</string>
    <string name="play_again">Play Again</string>
    <string name="change_to_portuguese">Change to Portuguese</string>
    <string name="change_to_english">Change to English</string>
    <string name="joaquim_santos">Joaquim Santos</string>
    <string name="henrique_dias">Henrique Dias</string>
    <string name="andr_coelho">André Coelho</string>
    <string name="credits">Credits</string>
</resources>
